# BugfixedHL-Rebased

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  Dockerfile.linux  Dockerfile.windows  README.md  vcpkg-configuration.json  vcpkg.json
gamedir/: CMakeLists.txt  commandmenu_default.txt  delta.lst
gamedir/addons/amxmodx/scripting/: bhl_api_example.sma
gamedir/gfx/vgui2/: 800corner.tga  800corner1.tga  800corner2.tga  800corner3.tga  800corner4.tga
gamedir/resource/: GameMenu.res
gamedir/sprites/: ag_ctf.spr  ag_ctf_score.spr  hud.txt
gamedir/ui/gfx/: circle_bg.tga  circle_fg.tga  cross_bg.tga  default_avatar.tga  muted_icon32.tga
gamedir/ui/gfx/hud/: ammo_357.tga  ammo_9mm.tga  ammo_bolt.tga  ammo_buckshot.tga  ammo_energy.tga  ammo_grenade_frag.tga  ammo_grenade_hornet.tga  ammo_grenade_mp5.tga  ammo_grenade_rpg.tga  ammo_grenade_satchel.tga  ammo_grenade_tripmine.tga  ammo_snark.tga  default_ammo.tga  speaker.tga  speaker_self.tga
gamedir/ui/gfx/vgui/: 800corner1.tga  800corner2.tga  800corner3.tga  800corner4.tga
gamedir/ui/resource/: Chat.res  ChatScheme.res  ChatSchemeBase.res  ClientScheme.res  ClientSchemeBase.res  ClientSourceScheme.res  ClientSourceSchemeBase.res  HudAmmo.res  HudAmmoSecondary.res  HudBattery.res  HudHealth.res  MOTD.res  ScorePanel.res  SpectatorInfoPanel.res  TeamMenu.res  ca-certificates.crt  open_source_software.txt
gamedir/ui/resource/language/: bugfixedhl_english.txt  bugfixedhl_english.utf8.txt  bugfixedhl_russian.txt  bugfixedhl_russian.utf8.txt  chat_english.utf8.txt  chat_french.utf8.txt  chat_german.utf8.txt  chat_italian.utf8.txt  chat_korean.utf8.txt  chat_russian.utf8.txt  chat_schinese.utf8.txt  chat_spanish.utf8.txt  chat_tchinese.utf8.txt
gamedir/ui/resource/options/: AboutSubOptions.res  ChatSubOptions.res  ColorPicker.res  CrosshairSubOptions.res  GeneralSubOptions.res  HudSubOptions.res  HudSubOptionsColors.res  ModelSubOptions.res  ScoreboardSubOptions.res
gamedir/ui/resource/updater/: UpdateDownloadStatusDialog.res  UpdateFileProgressDialog.res  UpdateFileReplaceDialog.res  UpdateNotificationDialog.res
gamedir/ui/scripts/: HudAnimations.txt  HudLayout.res  HudLayoutBase.res
src/bugfixedapi_amxx/: CMakeLists.txt  IGameConfigs.h  ITextParsers.h  amxxmodule.cpp  amxxmodule.h  bhl_api.cpp  bhl_api.h  bugfixedapi_amxx.cpp  bugfixedapi_amxx.def  moduleconfig.h
src/game/client/: CMakeLists.txt  Exports.h  GameStudioModelRenderer.cpp  GameStudioModelRenderer.h  GameStudioModelRenderer_Sample.cpp  GameStudioModelRenderer_Sample.h  StudioModelRenderer.cpp  StudioModelRenderer.h  bhlcfg.cpp  bhlcfg.h  camera.h  cdll_int.cpp  cl_dll.h  cl_util.cpp  cl_util.h  cl_voice_status.cpp  cl_voice_status.h  client_steam_context.cpp  client_steam_context.h  client_vgui.cpp  client_vgui.h  com_weapons.cpp  com_weapons.h  console.cpp  console.h  demo.cpp  demo.h  engfuncs.cpp  engfuncs.h  engine_builds.h  engine_patches.cpp  engine_patches.h  engine_patches_linux.cpp  engine_patches_stub.cpp  engine_patches_windows.cpp  entity.cpp  ev_common.cpp  ev_hldm.cpp  ev_hldm.h  events.cpp  (+55 more)
src/game/client/compat/: CMakeLists.txt  FileSystemCompat.cpp  FileSystemCompat.h  ISchemeCompat.cpp  ISchemeCompat.h  ISurfaceCompat.cpp  ISurfaceCompat.h  anniversary_compat.cpp  anniversary_compat.h
src/game/client/gameui/: CMakeLists.txt  gameui_test_panel.cpp  gameui_test_panel.h  gameui_viewport.cpp  gameui_viewport.h
src/game/client/hl/: CMakeLists.txt  hl_baseentity.cpp  hl_events.cpp  hl_objects.cpp  hl_weapons.cpp
src/game/client/hud/: CMakeLists.txt  ammo.cpp  ammo.h  ammo_secondary.cpp  ammo_secondary.h  ammohistory.cpp  ammohistory.h  base.cpp  base.h  battery.cpp  battery.h  chat.cpp  chat.h  crosshair.cpp  crosshair.h  death_notice.cpp  death_notice.h  death_notice_panel.cpp  death_notice_panel.h  flashlight.cpp  flashlight.h  geiger.cpp  geiger.h  health.cpp  health.h  jumpspeed.cpp  jumpspeed.h  menu.cpp  menu.h  message.cpp  message.h  saytext.cpp  saytext.h  scores.cpp  scores.h  spectator.cpp  spectator.h  spectator_orig.cpp  spectator_stub.cpp  speedometer.cpp  (+17 more)
src/game/client/lodepng/: CMakeLists.txt  lodepng.h
src/game/client/updater/: CMakeLists.txt  http_client.cpp  http_client.h  update_checker.cpp  update_checker.h  update_dialogs.cpp  update_dialogs.h  update_installer.cpp  update_installer.h  update_installer_linux.cpp  update_installer_windows.cpp
src/game/client/vgui/: CMakeLists.txt  ClassMenu.cpp  CustomObjects.cpp  IViewportPanel.h  MOTDWindow.cpp  SchemeManager.cpp  SchemeManager.h  ScorePanel.cpp  ScorePanel.h  SpectatorPanel.cpp  SpectatorPanel.h  TeamFortressViewport.cpp  TeamFortressViewport.h  TeamMenu.cpp  avatar_image.cpp  avatar_image.h  client_motd.cpp  client_motd.h  client_viewport.cpp  client_viewport.h  command_menu.cpp  command_menu.h  crosshair_image.cpp  crosshair_image.h  hud_ammo.cpp  hud_ammo.h  hud_ammo_secondary.cpp  hud_ammo_secondary.h  hud_battery.cpp  hud_battery.h  hud_health.cpp  hud_health.h  player_list_panel.cpp  player_list_panel.h  png_image.cpp  png_image.h  score_panel.cpp  score_panel.h  (+7 more)
src/game/server/: AI_BaseNPC_Schedule.cpp  AmxxOffsetClassList.txt  CBugfixedServer.cpp  CBugfixedServer.h  CMakeLists.txt  Wxdebug.cpp  activity.h  activitymap.h  aflock.cpp  agrunt.cpp  airtank.cpp  animating.cpp  animation.cpp  animation.h  apache.cpp  barnacle.cpp  barney.cpp  basemonster.h  bigmomma.cpp  bloater.cpp  bmodels.cpp  bullsquid.cpp  buttons.cpp  cbase.cpp  cbase.h  cdll_dll.h  client.cpp  client.h  com_utils.cpp  com_utils.h  combat.cpp  controller.cpp  crossbow.cpp  crowbar.cpp  decals.h  defaultai.cpp  defaultai.h  doors.cpp  doors.h  effects.cpp  (+120 more)
src/tests/: CMakeLists.txt
src/tests/client/: cl_exports.h  main.cpp
src/tests/common/: plat.h  plat_linux.cpp  plat_windows.cpp
src/tests/server/: main.cpp  sv_exports.h
src/tests/workdir/: libsteam_api.dylib  libtier0.dylib  libvstdlib.dylib
src/utils/logging/: CMakeLists.txt
src/vgui/fonts_freetype/: CMakeLists.txt
(+542 files in other folders)
